--- a/src/main/resources/ku/cs/buyBookPopup.fxml
+++ b/src/main/resources/ku/cs/buyBookPopup.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" style="-fx-background-radius: 20; -fx-background-color: FFFCF1;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ConfirmOrderController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" style="-fx-background-radius: 20; -fx-background-color: FFFCF1;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ConfirmOrderController">
    <children>
       <Text layoutX="148.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สั่งซื้อสินค้า" wrappingWidth="111.4278564453125">
          <font>
@@ -25,7 +25,7 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <Text fill="#f99f28" layoutX="10.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="จำนวนที่ต้องการซื้อ">
+      <Text fill="#f99f28" layoutX="10.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="จำนวนที่ต้องการซื้อ">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
@@ -39,38 +39,38 @@
             </Label>
          </children>
       </VBox>
-      <Label fx:id="sumBookPriceLabel" layoutX="162.0" layoutY="167.0" text="ราคารวม">
+      <Label fx:id="sumBookPriceLabel" layoutX="162.0" layoutY="208.0" text="ราคารวม">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Label>
       <Line endX="100.0" fill="#4c82ac" layoutX="199.0" layoutY="48.0" startX="-100.0" />
-      <TextField fx:id="inputNumOfBookTextField" layoutX="162.0" layoutY="114.0" prefHeight="26.0" prefWidth="84.0" promptText="ใส่จำนวน">
+      <TextField fx:id="inputNumOfBookTextField" layoutX="162.0" layoutY="108.0" prefHeight="26.0" prefWidth="84.0" promptText="ใส่จำนวน">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </TextField>
-      <Text layoutX="259.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เล่ม">
+      <Text layoutX="259.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เล่ม">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <Text fill="#f99f28" layoutX="14.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ราคาสินค้าทั้งหมด">
+      <Text fill="#f99f28" layoutX="14.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="โค้ดโปรโมชั่น">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <Button cache="true" layoutX="299.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleAddNumOfBookInput" prefHeight="27.0" prefWidth="64.0" style="-fx-background-color: C9AD88; -fx-background-radius: 20;" text="ยืนยัน" textFill="WHITE">
+      <Button cache="true" layoutX="316.0" layoutY="108.0" mnemonicParsing="false" onAction="#handleAddNumOfBookInput" prefHeight="27.0" prefWidth="64.0" style="-fx-background-color: C9AD88; -fx-background-radius: 20;" text="ยืนยัน" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="17.0" />
          </font>
       </Button>
-      <Text fx:id="bookPriceLabel1" layoutX="259.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Baht.">
+      <Text fx:id="bookPriceLabel1" layoutX="259.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Baht.">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <Button layoutX="119.0" layoutY="214.0" mnemonicParsing="false" onAction="#handleComfirmBuyBook" prefHeight="34.0" prefWidth="146.0" style="-fx-background-radius: 20;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="ยืนยันสั่งซื้อสินค้า" textFill="WHITE">
+      <Button layoutX="119.0" layoutY="246.0" mnemonicParsing="false" onAction="#handleConfirmBuyBook" prefHeight="34.0" prefWidth="146.0" style="-fx-background-radius: 20;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="ยืนยันสั่งซื้อสินค้า" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="21.0" />
          </font>
@@ -88,6 +88,21 @@
                </image>
             </ImageView>
          </graphic>
+      </Button>
+      <Text fill="#f99f28" layoutX="14.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ราคาสินค้าทั้งหมด">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Text>
+      <TextField fx:id="inputCodePromotion" layoutX="117.0" layoutY="158.0" prefHeight="27.0" prefWidth="181.0" promptText="ใส่โค้ด">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
+         </font>
+      </TextField>
+      <Button cache="true" layoutX="316.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleAddCodePromotionInput" prefHeight="27.0" prefWidth="64.0" style="-fx-background-color: C9AD88; -fx-background-radius: 20;" text="ยืนยัน" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="17.0" />
+         </font>
       </Button>
    </children>
    <effect>
