--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -93,9 +93,9 @@
       </HBox>
       <ScrollPane hbarPolicy="NEVER" layoutY="71.0" prefHeight="696.0" prefWidth="1024.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1380.0" prefWidth="1022.0" style="-fx-background-color: white;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1500.0" prefWidth="1022.0" style="-fx-background-color: white;">
                <children>
-                  <HBox layoutX="91.0" layoutY="611.0" prefHeight="44.0" prefWidth="604.0">
+                  <HBox layoutX="86.0" layoutY="736.0" prefHeight="44.0" prefWidth="604.0">
                      <children>
                         <FlowPane fx:id="bookRatingFlowPane" prefHeight="44.0" prefWidth="604.0">
                            <children>
@@ -135,7 +135,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="sendComment" layoutX="711.0" layoutY="814.0" mnemonicParsing="false" onAction="#handleSendCommentButton" prefHeight="26.0" prefWidth="241.0" style="-fx-background-radius: 20;" text="ส่งความคิดเห็น" textFill="WHITE">
+                  <Button fx:id="sendComment" layoutX="706.0" layoutY="939.0" mnemonicParsing="false" onAction="#handleSendCommentButton" prefHeight="26.0" prefWidth="241.0" style="-fx-background-radius: 20;" text="ส่งความคิดเห็น" textFill="WHITE">
                      <stylesheets>
                         <URL value="@style/PrimaryTheme.css" />
                         <URL value="@style/style.css" />
@@ -145,7 +145,7 @@
                         <String fx:value="backgroundColorLightBrownButton" />
                      </styleClass>
                   </Button>
-                  <HBox layoutX="82.0" layoutY="655.0" prefHeight="54.0" prefWidth="865.0" style="-fx-border-color: gray; -fx-border-radius: 10;">
+                  <HBox layoutX="77.0" layoutY="780.0" prefHeight="54.0" prefWidth="865.0" style="-fx-border-color: gray; -fx-border-radius: 10;">
                      <children>
                         <Button fx:id="addRatingPlusOne" mnemonicParsing="false" onAction="#handleAddRatingPlusOneButton" prefHeight="51.0" prefWidth="52.0" styleClass="toggle-button" stylesheets="@style/style.css" text="1">
                            <HBox.margin>
@@ -189,47 +189,48 @@
                         </Button>
                      </children>
                   </HBox>
-                  <Label fx:id="bookType" layoutX="482.0" layoutY="333.0" text="bookType">
+                  <Label fx:id="bookType" layoutX="483.0" layoutY="382.0" text="bookType">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label fx:id="bookISBN" layoutX="482.0" layoutY="271.0" text="bookISBN">
+                  <FlowPane prefHeight="200.0" prefWidth="200.0" />
+                  <Label fx:id="bookISBN" layoutX="483.0" layoutY="262.0" text="bookISBN">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label fx:id="bookPage" layoutX="482.0" layoutY="303.0" text="bookPage">
+                  <Label fx:id="bookPage" layoutX="483.0" layoutY="292.0" text="bookPage">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label fx:id="bookPublisher" layoutX="483.0" layoutY="404.0" text="bookPublisher">
+                  <Label fx:id="bookPublisher" layoutX="484.0" layoutY="352.0" text="bookPublisher">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label fx:id="bookAuthor" layoutX="483.0" layoutY="370.0" text="bookAuthor">
+                  <Label fx:id="bookAuthor" layoutX="484.0" layoutY="322.0" text="bookAuthor">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label layoutX="370.0" layoutY="150.0" text="ราคาหนังสือ" textFill="#f99f28">
+                  <Label layoutX="368.0" layoutY="147.0" text="ราคาหนังสือ" textFill="#f99f28">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label fx:id="bookPrice" layoutX="498.0" layoutY="151.0" text="bookPrice">
+                  <Label fx:id="bookPrice" layoutX="496.0" layoutY="147.0" text="bookPrice">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label layoutX="372.0" layoutY="462.0" text="เนื้อเรื่องย่อ" textFill="#f99f28">
+                  <Label layoutX="32.0" layoutY="546.0" text="เนื้อเรื่องย่อ" textFill="#f99f28">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Line endX="519.1333618164062" endY="3.0517578125E-5" layoutX="468.0" layoutY="445.0" startX="-98.46664428710938" startY="3.0517578125E-5" stroke="#bc986a" />
+                  <Line endX="739.3999633789062" layoutX="244.0" layoutY="562.0" startX="-98.46664428710938" stroke="#bc986a" />
                   <Label layoutX="24.0" layoutY="19.0" text="ประเภทหนังสือ |" textFill="#a05e07">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
@@ -240,28 +241,28 @@
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <ImageView fx:id="bookImg" fitHeight="459.0" fitWidth="299.0" layoutX="24.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="369.0" layoutY="84.0" text="ชื่อหนังสือ" textFill="#f99f28">
+                  <ImageView fx:id="bookImg" fitHeight="459.0" fitWidth="299.0" layoutX="29.0" layoutY="63.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
+                  <Label layoutX="367.0" layoutY="87.0" text="ชื่อหนังสือ" textFill="#f99f28">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label layoutX="369.0" layoutY="117.0" text="ชื่อร้านค้า" textFill="#f99f28">
+                  <Label layoutX="367.0" layoutY="117.0" text="ชื่อร้านค้า" textFill="#f99f28">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label layoutX="370.0" layoutY="183.0" text="สถานะสินค้า" textFill="#f99f28">
+                  <Label layoutX="368.0" layoutY="177.0" text="สถานะสินค้า" textFill="#f99f28">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label fx:id="bookNameLabel" layoutX="498.0" layoutY="84.0" text="bookName">
+                  <Label fx:id="bookNameLabel" layoutX="496.0" layoutY="87.0" text="bookName">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <HBox layoutX="498.0" layoutY="117.0">
+                  <HBox layoutX="496.0" layoutY="117.0">
                      <children>
                         <Label fx:id="bookShop" text="bookShop">
                            <font>
@@ -275,53 +276,60 @@
                         </Hyperlink>
                      </children>
                   </HBox>
-                  <Label fx:id="bookStatus" layoutX="498.0" layoutY="182.0" text="bookStatus" textFill="#cf2600">
+                  <Label fx:id="bookStatus" layoutX="496.0" layoutY="177.0" text="bookStatus" textFill="#cf2600">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Line endX="519.1333618164062" endY="3.0517578125E-5" layoutX="468.0" layoutY="220.0" startX="-98.46664428710938" startY="3.0517578125E-5" stroke="#bc986a" />
-                  <Label layoutX="371.0" layoutY="234.0" text="รายละเอียดหนังสือ" textFill="#f99f28">
+                  <Line endX="519.1333618164062" endY="3.0517578125E-5" layoutX="468.0" layoutY="218.0" startX="-98.46664428710938" startY="3.0517578125E-5" stroke="#bc986a" />
+                  <Label layoutX="372.0" layoutY="232.0" text="รายละเอียดหนังสือ" textFill="#f99f28">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label layoutX="373.0" layoutY="333.0" text="ประเภท :">
+                  <Label layoutX="374.0" layoutY="382.0" text="ประเภท :">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label layoutX="373.0" layoutY="272.0" text="ISBN :">
+                  <Label layoutX="374.0" layoutY="262.0" text="ISBN :">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label layoutX="373.0" layoutY="302.0" text="หน้า :">
+                  <Label layoutX="374.0" layoutY="292.0" text="หน้า :">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label layoutX="373.0" layoutY="404.0" text="สำนักพิมพ์ :">
+                  <Label layoutX="374.0" layoutY="352.0" text="สำนักพิมพ์ :">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <Label layoutX="372.0" layoutY="368.0" text="ผู้แต่ง :">
+                  <Label layoutX="373.0" layoutY="322.0" text="ผู้แต่ง :">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Label>
-                  <VBox layoutX="390.0" layoutY="495.0" maxWidth="579.0" prefWidth="579.0">
-                     <children>
-                        <Label fx:id="bookDetail" lineSpacing="10.0" maxWidth="579.0" prefWidth="579.0" text="bookDetail" wrapText="true">
-                           <font>
-                              <Font name="JasmineUPC" size="28.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </VBox>
-                  <TextField fx:id="commentTextField" layoutX="83.0" layoutY="713.0" prefHeight="86.0" prefWidth="865.0" promptText="เพิ่มความคิดเห็นที่นี่..." style="-fx-background-radius: 10; -fx-border-color: gray; -fx-border-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" />
-                  <VBox layoutX="63.0" layoutY="868.0" prefHeight="459.0" prefWidth="902.0" style="-fx-background-color: white;">
+                  <ScrollPane hbarPolicy="NEVER" layoutX="49.0" layoutY="579.0" maxHeight="118.0" prefHeight="118.0" prefWidth="945.0" style="-fx-background-color: fffff;" vbarPolicy="NEVER">
+                     <content>
+                        <VBox maxWidth="946.0" prefHeight="118.0" prefWidth="946.0" style="-fx-background-color: fff;">
+                           <children>
+                              <Label fx:id="bookDetail" alignment="TOP_LEFT" lineSpacing="10.0" maxWidth="953.0" prefHeight="118.0" prefWidth="953.0" text="bookDetail" wrapText="true">
+                                 <font>
+                                    <Font name="JasmineUPC" size="28.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                           </children>
+                        </VBox>
+                     </content>
+                  </ScrollPane>
+                  <TextField fx:id="commentTextField" layoutX="78.0" layoutY="838.0" prefHeight="86.0" prefWidth="865.0" promptText="เพิ่มความคิดเห็นที่นี่..." style="-fx-background-radius: 10; -fx-border-color: gray; -fx-border-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" />
+                  <VBox layoutX="58.0" layoutY="993.0" prefHeight="459.0" prefWidth="902.0" style="-fx-background-color: white;">
                      <children>
                         <ScrollPane hbarPolicy="NEVER" prefHeight="464.0" prefWidth="902.0" style="-fx-background-color: white;">
                            <content>
@@ -330,22 +338,13 @@
                         </ScrollPane>
                      </children>
                   </VBox>
-                  <Label layoutX="105.0" layoutY="589.0" prefHeight="26.0" prefWidth="166.0" styleClass="font_jasmine_25pt" stylesheets="@style/PrimaryTheme.css" text="คะแนนของสินค้า" textFill="#f99f28" />
-                  <Button layoutX="819.0" layoutY="588.0" mnemonicParsing="false" onAction="#handleToBuyBook" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="WHITE">
+                  <Label layoutX="100.0" layoutY="714.0" prefHeight="26.0" prefWidth="166.0" styleClass="font_jasmine_25pt" stylesheets="@style/PrimaryTheme.css" text="คะแนนของสินค้า" textFill="#f99f28" />
+                  <Button layoutX="814.0" layoutY="713.0" mnemonicParsing="false" onAction="#handleToBuyBook" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Button>
-                  <VBox alignment="CENTER" layoutX="350.0" layoutY="250.0" prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <GridPane fx:id="showPopupGrid">
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                        </GridPane>
-                     </children>
-                  </VBox>
-                  <HBox layoutX="64.0" layoutY="809.0" prefHeight="52.0" prefWidth="316.0">
+                  <HBox layoutX="59.0" layoutY="934.0" prefHeight="52.0" prefWidth="316.0">
                      <children>
                         <Label styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ความคิดเห็นทั้งหมด">
                            <HBox.margin>
@@ -359,16 +358,30 @@
                         </Label>
                      </children>
                   </HBox>
-                  <Text layoutX="585.0" layoutY="1354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="พบเนื้อหาที่ไม่เหมาะสมใช่หรือไม่ ?">
+                  <Text layoutX="580.0" layoutY="1479.0" strokeType="OUTSIDE" strokeWidth="0.0" text="พบเนื้อหาที่ไม่เหมาะสมใช่หรือไม่ ?">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
                   </Text>
-                  <Button layoutX="777.0" layoutY="1334.0" mnemonicParsing="false" onAction="#handleToReportButton" prefHeight="30.0" prefWidth="185.0" style="-fx-background-color: FFFFFF;" stylesheets="@style/PrimaryTheme.css" text="รายงานความไม่เหมาะสม" textFill="#b10000">
+                  <Button layoutX="772.0" layoutY="1459.0" mnemonicParsing="false" onAction="#handleToReportButton" prefHeight="30.0" prefWidth="185.0" style="-fx-background-color: FFFFFF;" stylesheets="@style/PrimaryTheme.css" text="รายงานความไม่เหมาะสม" textFill="#b10000">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
                   </Button>
+                  <ScrollPane hbarPolicy="NEVER" layoutX="374.0" layoutY="410.0" prefHeight="146.0" prefWidth="612.0" style="-fx-background-color: fff;" vbarPolicy="NEVER" AnchorPane.leftAnchor="374.0">
+                     <content>
+                        <FlowPane fx:id="showTypeBookFlowPane" hgap="5.0" prefHeight="146.0" prefWidth="612.0" style="-fx-background-color: fff;" />
+                     </content>
+                  </ScrollPane>
+                  <VBox alignment="CENTER" layoutX="350.0" layoutY="250.0" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <GridPane fx:id="showPopupGrid">
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </children>
+                  </VBox>
                </children>
             </AnchorPane>
         </content>
