--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -22,7 +22,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onMouseClicked="#handleToBookSortFromShop" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
+<AnchorPane onMouseClicked="#handleToBookSortFromShop" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
    <children>
       <HBox prefHeight="69.0" prefWidth="1024.0" stylesheets="@style/style.css">
          <children>
@@ -241,7 +241,15 @@
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <ImageView fx:id="bookImg" fitHeight="459.0" fitWidth="299.0" layoutX="29.0" layoutY="63.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
+                  <VBox alignment="CENTER" layoutX="29.0" layoutY="63.0" maxHeight="459.0" maxWidth="299.0" minHeight="459.0" minWidth="299.0">
+                     <children>
+                        <HBox alignment="CENTER">
+                           <children>
+                              <ImageView fx:id="bookImg" fitHeight="459.0" fitWidth="299.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
                   <Label layoutX="367.0" layoutY="87.0" text="ชื่อหนังสือ" textFill="#f99f28">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
