--- a/src/main/resources/ku/cs/buyBookPopup.fxml
+++ b/src/main/resources/ku/cs/buyBookPopup.fxml
@@ -39,7 +39,7 @@
             </Label>
          </children>
       </VBox>
-      <Label fx:id="sumBookPriceLabel" layoutX="162.0" layoutY="208.0" text="ราคารวม">
+      <Label fx:id="sumBookPriceLabel" layoutX="162.0" layoutY="202.0" text="ราคารวม">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
@@ -55,7 +55,7 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <Text fill="#f99f28" layoutX="14.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="โค้ดโปรโมชั่น">
+      <Text fill="#f99f28" layoutX="14.0" layoutY="172.0" strokeType="OUTSIDE" strokeWidth="0.0" text="โค้ดโปรโมชั่น">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
@@ -65,12 +65,12 @@
             <Font name="JasmineUPC" size="17.0" />
          </font>
       </Button>
-      <Text fx:id="bookPriceLabel1" layoutX="259.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Baht.">
+      <Text fx:id="bookPriceLabel1" layoutX="259.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Baht.">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <Button layoutX="119.0" layoutY="246.0" mnemonicParsing="false" onAction="#handleConfirmBuyBook" prefHeight="34.0" prefWidth="146.0" style="-fx-background-radius: 20;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="ยืนยันสั่งซื้อสินค้า" textFill="WHITE">
+      <Button layoutX="119.0" layoutY="229.0" mnemonicParsing="false" onAction="#handleConfirmBuyBook" prefHeight="34.0" prefWidth="146.0" style="-fx-background-radius: 20;" styleClass="bevel-orange" stylesheets="@style/PrimaryTheme.css" text="ยืนยันสั่งซื้อสินค้า" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="21.0" />
          </font>
@@ -89,21 +89,26 @@
             </ImageView>
          </graphic>
       </Button>
-      <Text fill="#f99f28" layoutX="14.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ราคาสินค้าทั้งหมด">
+      <Text fill="#f99f28" layoutX="14.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ราคาสินค้าทั้งหมด">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <TextField fx:id="inputCodePromotion" layoutX="117.0" layoutY="158.0" prefHeight="27.0" prefWidth="181.0" promptText="ใส่โค้ด">
+      <TextField fx:id="inputCodePromotion" layoutX="117.0" layoutY="153.0" onKeyReleased="#handleKeyCodePromotion" prefHeight="27.0" prefWidth="181.0" promptText="ใส่โค้ด">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </TextField>
-      <Button cache="true" layoutX="316.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleAddCodePromotionInput" prefHeight="27.0" prefWidth="64.0" style="-fx-background-color: C9AD88; -fx-background-radius: 20;" text="ยืนยัน" textFill="WHITE">
+      <Button cache="true" layoutX="316.0" layoutY="152.0" mnemonicParsing="false" onAction="#handleAddCodePromotionInput" prefHeight="27.0" prefWidth="64.0" style="-fx-background-color: C9AD88; -fx-background-radius: 20;" text="ยืนยัน" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="17.0" />
          </font>
       </Button>
+      <Label fx:id="codePromotionWarningLabel" layoutX="127.0" layoutY="184.0" textFill="RED">
+         <font>
+            <Font name="JasmineUPC" size="14.0" />
+         </font>
+      </Label>
    </children>
    <effect>
       <Lighting diffuseConstant="1.34">
