--- a/src/main/resources/ku/cs/stock.fxml
+++ b/src/main/resources/ku/cs/stock.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorpaneCenter" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.StockController">
+<AnchorPane fx:id="anchorpaneCenter" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.StockController">
    <children>
       <Rectangle fx:id="rectangleCenter" arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="220.0" layoutX="10.0" layoutY="5.0" stroke="WHITE" strokeType="INSIDE" width="670.0" />
       <VBox layoutX="178.0" layoutY="25.0" prefHeight="250.0" prefWidth="524.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
@@ -93,7 +90,10 @@
             <Font name="JasmineUPC" size="22.0" />
          </font>
       </Button>
-      <Label fx:id="notificationForStock" layoutX="430.5" layoutY="155.0" textFill="#fc0606" />
+      <Label fx:id="notificationForStock" layoutX="420.5" layoutY="155.0" textFill="#fc0606">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
+         </font></Label>
       <HBox alignment="CENTER" layoutX="458.0" layoutY="108.0" prefHeight="34.0" prefWidth="89.0">
          <children>
             <Label fx:id="bookStockLabel" text="10" textAlignment="CENTER">
