--- a/src/main/resources/ku/cs/sellerStock.fxml
+++ b/src/main/resources/ku/cs/sellerStock.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -193,14 +194,7 @@
                   </HBox>
                   <ScrollPane fx:id="scoll" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="500.0" prefWidth="698.0" style="-fx-background-color: fffff;" VBox.vgrow="ALWAYS">
                      <content>
-                        <GridPane fx:id="grid" style="-fx-background-color: ffffff;">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                        </GridPane>
+                        <FlowPane fx:id="flowPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: ffffff;" />
                      </content>
                   </ScrollPane>
                   <HBox prefHeight="62.0" prefWidth="698.0">
