--- a/src/main/resources/ku/cs/accountDetail.fxml
+++ b/src/main/resources/ku/cs/accountDetail.fxml
@@ -102,28 +102,28 @@
             <center>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="197.0" layoutX="17.0" layoutY="18.0" stroke="#fffcf1" strokeType="INSIDE" width="661.0" />
-                        <Label layoutX="76.0" layoutY="126.0" text="วันเกิด">
+                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="197.0" layoutX="17.0" layoutY="34.0" stroke="#fffcf1" strokeType="INSIDE" width="661.0" />
+                        <Label layoutX="76.0" layoutY="171.0" text="วันเกิด">
                             <font>
                                 <Font name="JasmineUPC" size="30.0" />
                             </font>
                         </Label>
-                        <Label layoutX="76.0" layoutY="90.0" text="รหัสผ่าน">
+                        <Label layoutX="76.0" layoutY="120.0" text="รหัสผ่าน">
                             <font>
                                 <Font name="JasmineUPC" size="28.0" />
                             </font>
                         </Label>
-                        <Label layoutX="400.0" layoutY="90.0" text="เบอร์โทร">
+                        <Label layoutX="400.0" layoutY="119.0" text="เบอร์โทร">
                             <font>
                                 <Font name="JasmineUPC" size="30.0" />
                             </font>
                         </Label>
-                        <Label layoutX="400.0" layoutY="126.0" text="เพศ">
+                        <Label layoutX="400.0" layoutY="171.0" text="เพศ">
                             <font>
                                 <Font name="JasmineUPC" size="30.0" />
                             </font>
                         </Label>
-                  <Button layoutX="592.0" layoutY="171.0" mnemonicParsing="false" onAction="#handleToEditInformationPageButton" prefHeight="31.0" prefWidth="82.0" stylesheets="@style/PrimaryTheme.css" text="แก้ไข" textFill="WHITE">
+                  <Button layoutX="586.0" layoutY="249.0" mnemonicParsing="false" onAction="#handleToEditInformationPageButton" prefHeight="31.0" prefWidth="82.0" stylesheets="@style/PrimaryTheme.css" text="แก้ไข" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -132,17 +132,17 @@
                         <String fx:value="bevel-orange" />
                      </styleClass>
                   </Button>
-                        <Button fx:id="forAdminButton" layoutX="335.0" layoutY="171.0" mnemonicParsing="false" onAction="#handleToForAdminButton" prefHeight="31.0" prefWidth="239.0" style="-fx-background-color: #fffcf1;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ส่วนของผู้พัฒนาระบบ" textFill="#fffcf1">
+                        <Button fx:id="forAdminButton" layoutX="335.0" layoutY="248.0" mnemonicParsing="false" onAction="#handleToForAdminButton" prefHeight="31.0" prefWidth="239.0" style="-fx-background-color: white;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ส่วนของผู้พัฒนาระบบ" textFill="#fffcf1">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Button>
-                        <Label layoutX="23.0" layoutY="241.0" stylesheets="@style/PrimaryTheme.css" text="ที่อยู่" textFill="#a05e07">
+                        <Label layoutX="23.0" layoutY="287.0" stylesheets="@style/PrimaryTheme.css" text="ที่อยู่" textFill="#a05e07">
                             <font>
                                 <Font name="JasmineUPC" size="36.0" />
                             </font>
                         </Label>
-                        <Button layoutX="586.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleToEditAddressButton" prefHeight="31.0" prefWidth="93.0" stylesheets="@style/PrimaryTheme.css" text="แก้ไขที่อยู่" textFill="WHITE">
+                        <Button layoutX="586.0" layoutY="601.0" mnemonicParsing="false" onAction="#handleToEditAddressButton" prefHeight="31.0" prefWidth="93.0" stylesheets="@style/PrimaryTheme.css" text="แก้ไขที่อยู่" textFill="WHITE">
                             <font>
                                 <Font size="18.0" />
                             </font>
@@ -151,13 +151,7 @@
                         <String fx:value="bevel-orange" />
                      </styleClass>
                         </Button>
-                        <Label layoutX="30.0" layoutY="413.0" stylesheets="@style/PrimaryTheme.css" text="โปรโมชั่น" textFill="#a05e07">
-                            <font>
-                                <Font name="JasmineUPC" size="36.0" />
-                            </font>
-                        </Label>
-                        <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="224.0" layoutY="449.0" startX="-210.39996337890625" startY="-3.0517578125E-5" />
-                  <HBox alignment="CENTER" layoutX="165.0" layoutY="126.0">
+                  <HBox alignment="CENTER" layoutX="165.0" layoutY="171.0">
                      <children>
                               <Label fx:id="birthdayLabel" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthday" textAlignment="CENTER">
                                   <font>
@@ -178,17 +172,17 @@
                               </Label>
                      </children>
                   </HBox>
-                        <Label fx:id="sexLabel" layoutX="494.0" layoutY="128.0" text="เพศ">
+                        <Label fx:id="sexLabel" layoutX="494.0" layoutY="173.0" text="เพศ">
                             <font>
                                 <Font name="JasmineUPC" size="24.0" />
                             </font>
                         </Label>
-                        <Label fx:id="phoneLabel" layoutX="496.0" layoutY="89.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="เบอร์โทรศัพท์">
+                        <Label fx:id="phoneLabel" layoutX="496.0" layoutY="118.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="เบอร์โทรศัพท์">
                             <font>
                                 <Font name="JasmineUPC" size="25.0" />
                             </font>
                         </Label>
-                  <HBox alignment="CENTER" layoutX="50.0" layoutY="40.0">
+                  <HBox alignment="CENTER" layoutX="75.0" layoutY="61.0">
                      <children>
                               <Label fx:id="usernameLabel" styleClass="font_rsu_20pt" stylesheets="@style/PrimaryTheme.css" text="Username">
                                   <font>
@@ -219,12 +213,12 @@
                               </Label>
                      </children>
                   </HBox>
-                        <Label fx:id="passwordLabel" layoutX="165.0" layoutY="88.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Password">
+                        <Label fx:id="passwordLabel" layoutX="165.0" layoutY="118.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Password">
                             <font>
                                 <Font name="JasmineUPC" size="25.0" />
                             </font>
                         </Label>
-                  <HBox layoutX="54.0" layoutY="284.0" prefHeight="122.0" prefWidth="522.0">
+                  <HBox layoutX="43.0" layoutY="347.0" prefHeight="232.0" prefWidth="605.0">
                      <children>
                         <Label fx:id="addressLabel" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css">
                            <HBox.margin>
@@ -233,7 +227,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="226.0" layoutY="275.0" startX="-213.20001220703125" startY="-3.0517578125E-5" />
+                  <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="226.0" layoutY="321.0" startX="-213.20001220703125" startY="-3.0517578125E-5" />
                   <Button layoutX="508.0" layoutY="665.0" mnemonicParsing="false" onAction="#handleToReportButton" prefHeight="30.0" prefWidth="185.0" style="-fx-background-color: FFFFFF;" stylesheets="@style/PrimaryTheme.css" text="รายงานความไม่เหมาะสม" textFill="#b10000">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
